--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Go Car</title>
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&libraries=places"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBv_3P3yNTVYWvi3fdSENaTV-jJ1XzWWAw&libraries=places"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
