using login API + add effect for login button

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Go Car</title>
+    <title>Go Taxi</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBv_3P3yNTVYWvi3fdSENaTV-jJ1XzWWAw&libraries=places"></script>
   </head>
   <body>
